fixes from technical sync 2